terraform/utils/service/yaml/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${name}-vertual-service
  namespace: ${namespace}
spec:
  hosts:
  - ${hostname}
  gateways:
  - ${gateway}
  http:
  - route:
    - destination:
        host: ${name}-service
        port:
          number: 80
